Sistema de sincronização IndexedDB com interface de painel

--- a/index.html
+++ b/index.html
@@ -537,6 +537,9 @@
     <script src="ux-improvements.js"></script>
     <script src="product-data.js"></script>
     <script src="indexedDB-storage.js"></script>
+    <!-- Módulos de sincronização IndexedDB -->
+    <script src="sync-indexdb-products.js"></script>
+    <script src="sync-panel-admin.js"></script>
     <script src="script.js"></script>
 </body>
 
