Mudar atalho admin para Ctrl+Alt+A

--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
     </footer>
 
     <script>
-        // Atalho de teclado para acessar admin: Ctrl+Shift+A
+        // Atalho de teclado para acessar admin: Ctrl+Alt+A
         document.addEventListener('keydown', (e) => {
-            if (e.ctrlKey && e.shiftKey && e.key === 'A') {
+            if (e.ctrlKey && e.altKey && e.key === 'a') {
                 window.location.href = 'admin.html';
             }
         });
